# game

./: .gitignore  AGENTS.md  COMMUNICATION.md  README.md  cfg.py  check.py  logger.py  pyproject.toml
backend/: alembic.ini  cfg.py  db_connection.py  db_mixins.py  di_container.py  docker-compose.yaml  pyproject.toml  setub_db.py
backend/migrations/: env.py
backend/migrations/versions/: 2025_12_27_A_initial_users.py
backend/src/app/: dependencies.py  main.py
backend/src/app/api/: auth.py
backend/src/app/core/: security.py
backend/src/app/core/services/: security.py
backend/src/app/pydantic_models/: auth.py
backend/src/infrastructure/enums/users/: enums.py
backend/src/infrastructure/models/: users.py
backend/src/infrastructure/models/users/: models.py
backend/src/infrastructure/pydantic_models/: users.py
backend/src/infrastructure/repositories/: _base_repository.py  user_repository.py
backend/src/infrastructure/stored_procedures/: README.md
backend/src/infrastructure/stored_procedures/triggers/users/: before_insert_user.py  before_update_user.py
backend/src/migrations/: env.py
backend/src/migrations/versions/: 2025_12_27_A_initial_users.py
backend/src/modules/event_handler/: event_handler.py
backend/src/modules/shared/: di_providers.py  exceptions.py  unit_of_work.py
backend/tests/app/: conftest.py
backend/tests/app/api/auth/: conftest.py  test_auth.py
frontend/: package-lock.json  package.json  vite.config.ts
frontend/src/: App.vue  main.ts
frontend/src/assets/: base.css
frontend/src/components/: TopNav.vue
(+11 files in other folders)
